# aitt

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
docs/superpowers/plans/: 2026-05-31-options-layer.md
docs/superpowers/specs/: 2026-05-31-options-layer-design.md  2026-06-01-intraday-live-execution-design.md  2026-06-01-options-live-execution-design.md
src/: __init__.py
src/agent/: __init__.py  __main__.py  jobs.py  notify.py  scheduler.py
src/core/: __init__.py  accumulation.py  backtest.py  backtest_portfolio.py  benchmarks.py  config.py  data.py  dossier.py  earnings.py  execution.py  exposure.py  gating.py  indicators.py  levels.py  market.py  multitimeframe.py  news.py  paper_trades.py  patterns.py  portfolio.py  ranking.py  regime.py  scorecard.py  scoring.py  signals.py  sizing.py  stage.py  storage.py  watchlist.py  watchlist.yaml
src/core/options/: __init__.py  chain.py  contracts.py  option_trades.py  pricing.py  vol.py
src/dashboard/: __init__.py  app.py
tests/: conftest.py  factories.py  test_accumulation.py  test_ath_pullback.py  test_backtest.py  test_backtest_portfolio.py  test_benchmarks.py  test_consolidation_breakout.py  test_dashboard.py  test_dossier.py  test_ema_pullback.py  test_execution.py  test_exposure.py  test_gating.py  test_indicators.py  test_ipo_base.py  test_levels.py  test_market.py  test_monitor.py  test_multitimeframe.py  test_news.py  test_option_chain.py  test_option_config.py  test_option_contracts.py  test_option_jobs.py  test_option_monitor.py  test_option_pricing.py  test_option_storage.py  test_option_trades.py  test_option_vol.py  test_paper_engine.py  test_paper_storage.py  test_paper_trades.py  test_patterns.py  test_portfolio.py  test_ranking.py  test_regime.py  test_resilience.py  test_scorecard.py  test_scoring.py  (+5 more)
(+22 files in other folders)
